fix layout issues with sidebar

--- a/frontend/public/extend/devconsole/shared/components/ConsolePage.scss
+++ b/frontend/public/extend/devconsole/shared/components/ConsolePage.scss
@@ -8,4 +8,13 @@
     flex-grow: 1;
     flex-shrink: 1;
   }
+
+  &__sidebar {
+    display: flex;
+
+    & > .pf-c-page__sidebar {
+      position: relative;
+      top: 0;
+    }
+  }
 }
